# A.G.E

./: .gitignore  AGE.py  README.txt  age1.cpp  document.tex  output_rastrigin.json  output_rosenbrock.json  output_sphere.json
age0_res/: final_result.json  output_rastrigin.json  output_rosenbrock.json  output_schwefel.json  run_console_log.txt
age1_res/: document.aux  document.tex  final_result.json  output_schwefel.json  output_sphere.json  run_console_log.txt
age1p_res/: candidate_tree_lengthy.json  candidate_tree_readable.json  document.tex
age2_res/: document.tex  output_age1_rastrigin.json  output_age1_rosenbrock.json  output_age1_schwefel.json  output_age1_sphere.json  output_age2_rastrigin.json  output_age2_rosenbrock.json  output_age2_schwefel.json  output_age2_sphere.json
age2p_res/: document.tex  output_age2p_rastrigin.json  output_age2p_rosenbrock.json  output_age2p_schwefel.json  output_age2p_sphere.json
age3_res/: document.tex
cpp_proj/AGEProj/: AGEProj.sln  CMakeLists.txt
cpp_proj/AGEProj/AGEProj/: AGE.h  AGEProj.vcxproj  AGEProj.vcxproj.filters  AlgorithmsAGE0.h  AlgorithmsAGE1.h  AlgorithmsAGE1p.h  AlgorithmsAGE2.h  AlgorithmsAGE3.h  FunctionsAGE0.h  FunctionsAGE1.h  FunctionsAGE1p.h  FunctionsAGE2.h  FunctionsAGE3.h  Source.cpp  SourceAGE3.cpp  constexpr_functions.h
instances/: frb35-17-1.cnf  frb45-21-1.cnf  frb50-23-1.cnf  frb53-24-1.cnf  frb56-25-1.cnf
